[package]
name = "guillemot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array2d = "0.3.0"
bevy = "0.10.1"
rand = "0.8.5"
rand_distr = "0.4.3"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
crossbeam-channel = "0.5.7"